--- a/zhoutao/.classpath
+++ b/zhoutao/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="src/test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jrockit_160_14_R27.6.5-32"/>
-	<classpathentry kind="lib" path="/Tester/lib/junit-4.7.jar"/>
+	<classpathentry excluding="src/java/|src/test/" kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
